# ========== DOSYA: sentinel-api/Cargo.toml ==========
[package]
name = "sentinel-api"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-nats = "0.34"
prost = "0.12"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
# 🔥 CERRAHİ: REST API (Diagnose) JSON Serileştirme Kütüphaneleri Eklendi
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prost-build = "0.12"